--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <div class="button">
-    <button class="duplicator">Duplicator</button>
+    <button class="duplicator">Duplication Button</button>
     <button class="toggle-background">Toggle Background</button>
     <button class="change-heading">Change Heading</button>
     <button class="delete-card">Delete Card</button>
