--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <button class="changeColorBtn"> Background Color</button>
     <button class="change-heading">Change Heading</button>
     <button class="delete-card">Delete Card</button>
-    <button class="toggleDetails">Open Details</button>
+    <button class="toggleDescription">Open Description</button>
   </div>
   <style>
     html,
@@ -76,7 +76,7 @@
     });
 
     document.body.addEventListener('opened-changed', (e) => {
-      document.querySelector(".toggleDetails").innerText = e.detail.value ? 'Hide Details' : 'Show Details';
+      document.querySelector(".toggleDescription").innerText = e.detail.value ? 'Hide Description' : 'Show Description';
       console.log('opened-changed', e.detail, e.target)
     });
 
@@ -92,9 +92,9 @@
     });
 
     //for some reason this throws an error only after making use of the change heading button. Refresh the page, and this button works perfectly.
-    document.querySelector(".toggleDetails").addEventListener("click", function (e) {
-      var details = document.querySelector("logo-card");
-      details.opened = !details.opened;
+    document.querySelector(".toggleDescription").addEventListener("click", function (e) {
+      var description = document.querySelector("logo-card");
+      description.opened = !description.opened;
     })
 
   </script>
